--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.43",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
